<resources>
    <string name="about_dialog_app_version">Version: %1$s</string>
    <string name="about_notices">Legal Notices</string>
    <string name="context_menu_compare">Compare scans</string>
    <string name="context_menu_compare_short">Compare</string>
    <string name="context_menu_delete_scan">Delete scan report</string>
    <string name="context_menu_edit">Edit scan title</string>
    <string name="context_menu_edit_short">Edit title</string>
    <string name="context_menu_find_similar">Find scans of the same tag</string>
    <string name="context_menu_find_similar_short">Find similar scans</string>
    <string name="dialog_key_mfc">MIFARE Classic</string>
    <string name="dialog_key_ntag">NTAG 21x series</string>
    <string name="dialog_key_ulc">MIFARE Ultralight C</string>
    <string name="dialog_key_ulev1">MIFARE Ultralight EV1</string>
    <string name="dialog_sort_ascending">Ascending</string>
    <string name="dialog_sort_descending">Descending</string>
    <string name="dialog_sort_ndef">NDEF presence</string>
    <string name="dialog_sort_time">Time</string>
    <string name="dialog_sort_title">Description</string>
    <string name="dialog_sort_uid">ID value</string>
    <string name="dialog_title_new_key">Choose a key type</string>
    <string name="dialog_title_sort_by">Sort by</string>
    <string name="help_glossary_title">List of abbreviations and technical terms</string>
    <string name="help_home">This tab contains information on the manufacturer of the IC (chip) inside the tag and the IC type used (if detected). A list of applications possibly supported by the tag will also reported in this tab.</string>
    <string name="help_home_title">Info tab</string>
    <string name="help_info">This tab shows various further functional details detected about the IC used inside the tag.</string>
    <string name="help_info_title">Extra tab</string>
    <string name="help_intro_text">"The NXP TagInfo application allows you to browse the content of public transport and payment cards that are based on a contactless technology compatible with NFC in your device. In addition to its use as value checker NXP TagInfo will identify many additional applications.
On top of the consumer focused functions it explores the full details of openly accessible information on contactless cards, tags and NFC-enabled items. In the following text we will use the simplified term tag for all contactless cards, tags and NFC-enabled items in general that can be accessed by your device.

The menu of the application provides access to options to share an NFC data set with other applications and to email all information as shown on the four tabs of the application.

All information as displayed will also be stored and is available for later viewing via the history option in the menu. The history option allows browsing through previously inspected tags. There is a search option in the application menu to quickly find the desired item. By long pressing an item, a context menu will be shown for that item.

The settings option allows configuring some application behavior such as the amount of details shown on the screen and user interface aspects such as disabling the sound (except for sounds generated by the Android system), the vibration and more. It also allows making the NXP TagInfo work so that it does pop up as a target application in the application chooser of the Android system when NFC related activities are detected.

A list of abbreviations and technical terms as used by NXP TagInfo is included at the end of the help text.

The application user interface is split into four tabs (“screens”). Each of them can be selected by a tap on the icons at the top of the screen. The tabs are used to group the information that NXP TagInfo has read from the tag. The information split per tab is explained below."</string>
    <string name="help_ndef">This tab contains the content and details of NFC Forum data sets possibly detected on the tag.</string>
    <string name="help_ndef_title">NDEF tab</string>
    <string name="help_tech">This tab lists the supported technologies of the tag detected as named by the Android NFC API as well as the related International Standards. In addition, this tab provides parameter information related to the supported communication modes and protocols about the IC used inside the tag. Furthermore, this tab displays the complete memory contents of supported tag types when this has been enabled in the settings.</string>
    <string name="help_tech_title">Tech tab</string>
    <string name="help_title">Application overview</string>
    <string name="license_EULA"><b>IMPORTANT:</b>" This Software End-User License Agreement is a binding agreement between you, the end-user, and NXP Semiconductors N.V. regarding the use of the software accompanying this Agreement, which includes NXP TagInfo and provided documentation (together \"SOFTWARE\"). By installing, copying or otherwise using the SOFTWARE, you agree to be bound by the terms of this License Agreement.

"<b>End User License Agreement</b>"

THIS SOFTWARE IS THE PROPERTY OF NXP Semiconductors N.V. (hereinafter referred to as \"NXP\"), ALL RIGHTS RESERVED.

UNDER NO CIRCUMSTANCES IS THIS SOFTWARE TO BE EXPOSED TO OR PLACED UNDER AN OPEN SOURCE LICENSE OF ANY TYPE WITHOUT THE EXPRESSED WRITTEN PERMISSION OF NXP

"<b>1. OBJECT AND SCOPE OF THE AGREEMENT:</b>"
NXP grants you a non-exclusive and non-transferable right to use the provided SOFTWARE:
• to install all components of the SOFTWARE on a single device
• to create backup copies of the SOFTWARE
• to install and use the SOFTWARE

"<b>2. UPDATE:</b>"
In the event NXP provides any update to the SOFTWARE you may not use the earlier version(s) of the Software after 90 days of the provision of the applicable update. This article shall not be interpreted to impose any obligation on NXP to provide any update to the SOFTWARE.

"<b>3. DISCLAIMER OF WARRANTIES:</b>"
YOU AGREE THAT NXP HAS MADE NO EXPRESS WARRANTIES TO YOU REGARDING THE SOFTWARE AND THAT THE SOFTWARE IS BEING PROVIDED TO YOU \"AS IS\" WITHOUT WARRANTY OF ANY KIND.
NXP DISCLAIMS ALL WARRANTIES WITH REGARD TO THE SOFTWARE, EXPRESS OR IMPLIED, INCLUDING, WITHOUT LIMITATION, ANY IMPLIED WARRANTIES OF FITNESS FOR A PARTICULAR PURPOSE, MERCHANTABILITY, MERCHANTABLE QUALITY OR NONINFRINGEMENT OF THIRD PARTY RIGHTS.
Some states or jurisdictions do not allow the exclusion of implied warranties so the above limitations or parts of it may not apply to you.

"<b>4. LIMITATION OF LIABILITY:</b>"
IN NO EVENT WILL NXP BE LIABLE TO YOU FOR ANY LOSS OF USE, INTERRUPTION OF BUSINESS, OR ANY DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES OF ANY KIND (INCLUDING LOST PROFITS) REGARDLESS OF THE FORM OF ACTION WHETHER IN CONTRACT, TORT (INCLUDING NEGLIGENCE), STRICT PRODUCT LIABILITY OR OTHERWISE, EVEN IF ENDUSER HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
Some states or jurisdictions do not allow the exclusion or limitation of incidental or consequential damages, so the above limitation, exclusion or parts of it may not apply to you.

"<b>5. USAGE:</b>"
ANY SOFTWARE MADE AVAILABLE IN FORM OF THIS PACKAGE IS MADE AVAILABLE FOR USE BY END USERS ONLY AND ANY FURTHER COPYING, MODIFICATION; REVERSE DEVELOPMENT, DECOMPILING, REPRODUCTION OR REDISTRIBUTION OF THIS PACKAGE OR PARTS OF IT IS EXPRESSLY PROHIBITED. WE DO NOT WARRANT THAT THE FUNCTIONS CONTAINED WILL MEET YOUR REQUIREMENTS OR THAT THE OPERATION WILL BE UNINTERRUPTED OR ERROR FREE. THEY ARE NOT OPTIMISED IN TERMS OF SPEED OR SIZE. THE ENTIRE RISK AS TO THE RESULTS AND PERFORMANCE OF USE IS ASSUMED BY YOU.

END OF TERMS AND CONDITIONS"</string>
    <string name="license_instructions">Read all of the following terms and conditions and confirm to accept by clicking the \"<b>I accept</b>"\" button at the end. 
"</string>
    <string name="license_ok"><b><font size="20">I accept</font></b></string>
    <string name="menu_add_key">Add key</string>
    <string name="menu_clear_screen">Clear scan report</string>
    <string name="menu_email">Email scan report</string>
    <string name="menu_email_short">Email scan</string>
    <string name="menu_export_all">Export database</string>
    <string name="menu_mark_key">Select keys</string>
    <string name="menu_mark_scan">Select scans</string>
    <string name="menu_open_scan">Open scan</string>
    <string name="menu_open_scan_file">Open scan XML file</string>
    <string name="menu_save_scan">Save scan</string>
    <string name="menu_send">Share scan report</string>
    <string name="menu_send_ndef">Write NFC data set</string>
    <string name="menu_send_short">Share scan</string>
    <string name="menu_sort_field">Sort</string>
    <string name="menu_switch_db">Open database</string>
    <string name="pref_check_ndef">Check for NFC data sets</string>
    <string name="pref_check_ndef_summary">Automatically read NDEF messages</string>
    <string name="pref_default_scan_level">@string/pref_scan_level_full</string>
    <string name="pref_email_category">Scan report sharing</string>
    <string name="pref_email_only">Only via email</string>
    <string name="pref_email_share_address">Default email address</string>
    <string name="pref_email_share_address_title">Enter an email address</string>
    <string name="pref_email_xml">Attach scan report in XML</string>
    <string name="pref_foreground_only">Hide from app chooser</string>
    <string name="pref_foreground_only_summary">Do not interfere with other apps</string>
    <string name="pref_general_category">User interface</string>
    <string name="pref_lock_orientation_title">Auto-rotate screen</string>
    <string name="pref_operation_category">Scan operation</string>
    <string name="pref_reader_config_nfc_a">Detect NFC-A tags</string>
    <string name="pref_reader_config_nfc_a_summary">ISO/IEC 14443-3&amp;4 Type A, NXP MIFARE</string>
    <string name="pref_reader_config_nfc_b">Detect NFC-B tags</string>
    <string name="pref_reader_config_nfc_b_summary">ISO/IEC 14443-4 Type B</string>
    <string name="pref_reader_config_nfc_barcode">Detect NFC Barcode tags</string>
    <string name="pref_reader_config_nfc_barcode_summary">(If your device supports them)</string>
    <string name="pref_reader_config_nfc_f">Detect NFC-F tags</string>
    <string name="pref_reader_config_nfc_f_summary">JIS X 6319-4, Sony FeliCa</string>
    <string name="pref_reader_config_nfc_v">Detect NFC-V tags</string>
    <string name="pref_reader_config_nfc_v_summary">ISO/IEC 15693-3, NXP ICODE</string>
    <string name="pref_reader_mode">NFC reader mode</string>
    <string name="pref_reader_mode_config">Configure NFC reader mode</string>
    <string name="pref_reader_mode_summary_off">Control which tags will be detected</string>
    <string name="pref_reader_mode_summary_on">(Android Beam is now disabled)</string>
    <string name="pref_scan_level">Amount of tag details collected</string>
    <string name="pref_show_email_subject">Edit subject</string>
    <string name="pref_show_email_subject_summary">Allow to edit the subject before sharing</string>
    <string name="pref_show_hex">Show hexadecimal values</string>
    <string name="pref_show_hex_summary">With various interpreted data</string>
    <string name="pref_sound_enabled_summary">At the start or finish of a scan</string>
    <string name="pref_sound_enabled_title">Play sounds</string>
    <string name="pref_switch_to_info_summary">When a new tag is scanned</string>
    <string name="pref_switch_to_info_title">Switch back to Info view</string>
    <string name="pref_technology_category">Tag technologies</string>
    <string name="pref_try_key_b">Find all MIFARE keys</string>
    <string name="pref_try_key_b_summary_on">May take a long time to complete!</string>
    <string name="pref_vib_enabled_summary">When starting or finishing a scan</string>
    <string name="pref_vib_enabled_title">Vibrate</string>
</resources>