<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item android:icon="@drawable/ic_action_share" android:id="@id/shareTag" android:menuCategory="20000" android:orderInCategory="10" android:title="@string/menu_send" android:titleCondensed="@string/menu_send_short" android:showAsAction="1" android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider" />
    <item android:icon="@drawable/ic_action_email" android:id="@id/sendTag" android:menuCategory="20000" android:orderInCategory="11" android:title="@string/menu_email" android:titleCondensed="@string/menu_email_short" android:showAsAction="1" />
    <item android:icon="@drawable/ic_menu_tagwriter" android:id="@id/sendNdef" android:menuCategory="20000" android:orderInCategory="12" android:title="@string/menu_send_ndef" android:titleCondensed="@string/menu_send_ndef" android:showAsAction="1" />
    <item android:icon="@drawable/ic_action_save" android:id="@id/saveScan" android:menuCategory="20000" android:orderInCategory="19" android:title="@string/menu_save_scan" android:titleCondensed="@string/menu_save_scan" android:showAsAction="1" />
    <item android:icon="@drawable/ic_action_collection" android:id="@id/openScanFile" android:menuCategory="20000" android:orderInCategory="20" android:title="@string/menu_open_scan_file" android:titleCondensed="@string/menu_open_scan" android:showAsAction="0" />
    <item android:icon="@drawable/ic_menu_clear_screen" android:id="@id/clearScreen" android:menuCategory="20000" android:orderInCategory="30" android:title="@string/menu_clear_screen" android:titleCondensed="@string/menu_clear_screen" android:showAsAction="0" />
</menu>
