<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item android:icon="@drawable/ic_action_new_account" android:id="@id/add_key" android:menuCategory="20000" android:orderInCategory="1" android:title="@string/menu_add_key" android:titleCondensed="@string/menu_add_key" android:showAsAction="1" />
    <item android:icon="@drawable/ic_menu_mark" android:id="@id/mark_items" android:menuCategory="20000" android:orderInCategory="2" android:title="@string/menu_mark_key" android:titleCondensed="@string/menu_mark_key" android:showAsAction="1" />
    <item android:icon="@drawable/ic_action_sort_by_size" android:id="@id/sortBy" android:menuCategory="20000" android:orderInCategory="4" android:title="@string/menu_sort_field" android:titleCondensed="@string/menu_sort_field" android:showAsAction="1" />
</menu>
